--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset='utf-8'>
   <title>Puzzle</title>
   <script src='lib/p5.min.js'></script>
+  <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
