--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang='ja'>
+<html lang='jp'>
 
 <head>
   <meta charset='utf-8'>
   <title>Puzzle</title>
-  <script src='lib/p5.min.js'></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
   <link href="style.css" rel="stylesheet">
-  <script src='js/button.js'></script>
-  <script src='js/reversePuzzle.js'></script>
-  <script src='js/timeJudge.js'></script>
-  <script src='js/Block.js'></script>
-  <script src='js/menu.js'></script>
-  <script src='js/sketch.js'></script>
+  <script src='js/Button.js' defer></script>
+  <script src='js/reversePuzzle.js' defer></script>
+  <script src='js/timeJudge.js' defer></script>
+  <script src='js/Block.js' defer></script>
+  <script src='js/menu.js' defer></script>
+  <script src='js/sketch.js' defer></script>
 </head>
 
 <body>
