--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset='utf-8'>
   <title>Puzzle</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
+  <script src="lib/p5.min.js" defer></script>
   <link href="style.css" rel="stylesheet">
   <script src='js/Button.js' defer></script>
   <script src='js/reversePuzzle.js' defer></script>
