--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset='utf-8'>
   <title>Puzzle</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script> -->
   <script src="lib/p5.min.js" defer></script>
   <link href="style.css" rel="stylesheet">
   <script src='js/Button.js' defer></script>
   <script src='js/reversePuzzle.js' defer></script>
   <script src='js/timeJudge.js' defer></script>
+  <script src='js/slidePuzzle.js' defer></script>
   <script src='js/Block.js' defer></script>
   <script src='js/menu.js' defer></script>
   <script src='js/sketch.js' defer></script>
