--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </head>
 
 <body>
-
+  <div id = "canvasP"></div>
+  <font size = "5"> Source Code ⇒</font>
+  <a href="https://github.com/etyona/Puzzle"> <font size = "5"> GitHub </font></a>
 </body>
 
 </html>
